2000-12-21  Alex Samuel  <samuel@codesourcery.com>

	* qm/.cvsignore: New file.
	* qm/track/.cvsignore: Likewise.
	
2000-12-21  Alex Samuel  <samuel@codesourcery.com>

	* standard.mk (PRINTTEX): Define as dummy if there's no DocBook.
	(PRINTPDF): Likewise.
	(test): New target.

	* qm/__init__.py: New file.
	* qm/common.py: Likewise.
	* qm/regression_test.py: Likewise.
	* qm/track/__init__.py: Likewise.
	* qm/track/issue.py: Likewise.
	* qm/track/issue_class.py: Likewise.
	* qm/track/test.py: Likewise.
	
2000-12-15  R. Lindsay Todd  <toddr@rpi.edu>


	* doc/design/qmconfig/design.xml: Reorder some sections.
	* doc/design/qmconfig/design-lm.xml: Add additional ids.
	* doc/design/qmconfig/design-td.xml: Likewise.
	* doc/design/qmconfig/design-probe.xml: Likewise.  Added rough
	draft of probe database.

2000-12-15  R. Lindsay Todd  <toddr@rpi.edu>

	* doc/design/qmconfig/overview.xml: Remove /> sequences, so as to
	not confuse psgml.
	* doc/design/qmconfig/design-lm.xml: Likewise.
	* doc/design/qmconfig/requirements.xml: Likewise.
	* doc/design/qmconfig/design.xml: Likewise.
	* doc/design/qmconfig/design-td.xml: Likewise.

2000-12-15  R. Lindsay Todd  <toddr@rpi.edu>

	* doc/design/qmconfig/design.xml: Add/fix id's.
	* doc/design/qmconfig/intro.xml: Likewise.
	* doc/design/qmconfig/overview.xml: Likewise.
	* doc/design/qmconfig/requirements.xml: Likewise.
	* doc/design/qmconfig/design-td.xml: Likewise.  Fix images.
	* doc/design/qmconfig/qmconfig.xml: Add qm.mod.

2000-12-14  Alex Samuel  <samuel@codesourcery.com>

	* standard.mk ($(PRINTDIR)/$(PRINTPDF)): Return true even if empty
	$(DOCBITMAPS).

2000-12-14  Alex Samuel  <samuel@codesourcery.com>

	* standard.mk ($(PRINTDIR)/$(PRINTPDF)): Handle empty $(DOCBITMAPS).

2000-12-14  Alex Samuel  <samuel@codesourcery.com>

	* README.sources: Update ChangeLog and documentation instructions. 

2000-12-13  Alex Samuel  <samuel@codesourcery.com>

	* standard.mk ($(PRINTDIR)/$(PRINTPDF)): Copy bitmaps into print