@@ -1,3 +1,7 @@
+2000-12-22  Alex Samuel  <samuel@codesourcery.com>
+
+	* Makefile: New file.
+
 2000-12-21  Alex Samuel  <samuel@codesourcery.com>
 
 	* qm/.cvsignore: New file.
